--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             background-color: var(--white-pure);
             color: var(--brown-dark);
             overflow-x: hidden;
+            margin: 0;
         }
         h1, h2, h3, .font-serif {
             font-family: 'Playfair Display', serif;
@@ -68,14 +69,17 @@
 <script type="importmap">
 {
   "imports": {
-    "react/": "https://esm.sh/react@^19.2.3/",
     "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.1"
   }
 }
 </script>
 </head>
 <body>
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
 </body>
 </html>
